<resources>
    <string name="app_name">Split Bills</string>
    <string name="action_settings">Settings</string>
    <string name="createSession">Create New Event</string>
    <string name="loadSession">Load Existing Event</string>
    <string name="deleteSession">Delete Existing Event</string>
    <string name="title_activity_all_sessions">All Events</string>
    <string name="backToHomeScreen">Back</string>
    <string name="deleteSessions">Delete Events</string>
    <string name="SessionScreen">Dashboard</string>
    <string name="AddPersonScreen">Add Participants</string>
    <string name="ResultScreen">Result</string>
    <string name="AddTransactionScreen">Add Expense</string>
    <string name="CreateSessionScreen">Create Event</string>
    <string name="CreateSessionButton">Create</string>
    <string name="CreatePersonButton">Create</string>
    <string name="CancelSessionButton">Cancel</string>
    <string name="CancelButton">Cancel</string>
    <string name="deleteButton">Delete</string>
    <string name="UpdatePersonScreen">Update Person</string>
    <string name="UpdateButton">Update</string>
    <string name="UpdateTransactionScreen">Update Transaction</string>
    <string name="AllTransactionsScreen">All Transactions</string>
    <string name="AllPersonScreen">All Person</string>
    <string name="NameOfSessionHint">Trip to Goa ,Hotel expenses.. etc </string>
    <string name="sessionNameLabel">Name of the Event</string>
    <string name="personNameLabel">Name of the Person</string>
    <string name="title_activity_all_persons">AllPerson</string>
    <string name="title_activity_all_transactions">AllTransactions</string>
</resources>
