<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateSession">

    <TextView
    android:id="@+id/textView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/CodeFont"
    android:text="@string/sessionNameLabel"
    android:layout_margin="20dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/sessionName"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView1"
        android:hint="@string/NameOfSessionHint"/>
        <requestFocus />

    <Button
        android:id="@+id/saveSessionName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:onClick="createNewSession"
        android:text="@string/CreateSessionButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sessionName" />

    <Button
        android:id="@+id/cancelSessionName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:onClick="cancelCreateSession"
        android:text="@string/CancelSessionButton"
        app:layout_constraintBottom_toBottomOf="@id/saveSessionName"
        app:layout_constraintStart_toEndOf="@id/saveSessionName"
        app:layout_constraintTop_toTopOf="@id/saveSessionName" />

</androidx.constraintlayout.widget.ConstraintLayout>