<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".Screens.MainActivity"
    android:background="@color/backGroundColor">

    <Button
        android:id="@+id/btn_goToCreateSession"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/buttonColor"
        android:onClick="goToCreateSessionScreen"
        android:text="@string/createSession"
        android:textColor="@color/buttonTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_goToLoadSession"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/buttonColor"
        android:onClick="goToLoadSessionScreen"
        android:text="@string/loadSession"
        android:textColor="@color/buttonTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_goToCreateSession" />

    <Button
        android:id="@+id/btn_goToDeleteSession"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/buttonColor"
        android:onClick="goToDeleteSessionScreen"
        android:text="@string/deleteSession"
        android:textColor="@color/buttonTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_goToLoadSession" />

</androidx.constraintlayout.widget.ConstraintLayout>