<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screens.AddPerson">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textprimary"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/personNameLabel"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/edt_createPersonName"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2"/>
    <requestFocus />

    <Button
        android:id="@+id/btn_createPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:onClick="createNewPerson"
        android:text="@string/CreatePersonButton"
        android:background="@drawable/button_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_createPersonName" />

    <Button
        android:id="@+id/btn_CancelPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:onClick="cancelCreatePerson"
        android:text="@string/CancelButton"
        android:background="@drawable/button_layout"
        app:layout_constraintBottom_toBottomOf="@id/btn_createPerson"
        app:layout_constraintStart_toEndOf="@id/btn_createPerson"
        app:layout_constraintTop_toTopOf="@id/btn_createPerson" />

</androidx.constraintlayout.widget.ConstraintLayout>