<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screens.AddPerson">

    <TextView
        android:id="@+id/editSessionTextView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textprimary"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/sessionNameLabel"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/edt_editSessionName"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editSessionTextView2"/>
    <requestFocus />

    <Button
        android:id="@+id/btn_editSession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:onClick="editSession"
        android:text="@string/UpdateButton"
        android:background="@drawable/button_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_editSessionName" />


    <Button
        android:id="@+id/btn_cancelEditSession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:onClick="cancelUpdateSession"
        android:text="@string/CancelButton"
        android:background="@drawable/button_layout"
        app:layout_constraintBottom_toBottomOf="@id/btn_editSession"
        app:layout_constraintStart_toEndOf="@id/btn_editSession"
        app:layout_constraintTop_toTopOf="@id/btn_editSession" />



</androidx.constraintlayout.widget.ConstraintLayout>